# brinicle

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
tests/: concurrent_lib_test.py  concurrent_search_lib_test.py  irrational_lib_test.py  simple_test.py
